# qwen_cli_assistant

./: Cargo.toml  README.md  embeddings.db  session_control.json
application/src/: rag_service.rs
cli/: Cargo.toml
infrastructure/: Cargo.toml
infrastructure/src/: config.rs  embedding_storage.rs  file_scanner.rs  ollama_client.rs  search.rs
presentation/: Cargo.toml
presentation/src/: cli.rs
shared/src/: utils.rs
src/: agent.rs  clipboard.rs  config.rs  main.rs  model.rs  prompt.rs  runner.rs  safety.rs  scriptgen.rs  session.rs
