[package]
name = "qwen_cli_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
colored = "2.1"
dialoguer = "0.11"
anyhow = "1.0"
arboard = "3.4"
